--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:blue">
-    <h2>Hello, devoxx!</h2>
+    <h2>Hello, NAB!</h2>
   </body>
 </html>
